<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="existing_login">Existing Login</string>
    <string name="new_login">New Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_msg">thank you for choosing ShoeStore, hope you would like it :D</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_msg">Now press next to start using the app</string>
    <string name="name">Name</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="size">Size</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="company">company</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="description">description</string>
    <string name="enter_description">Enter description</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
</resources>
