<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newShoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- wanted to arrange views in vertical orientation, so uses LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        tools:context=".fragments.ShoeDetailsFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={newShoe.name}"
            android:hint="@string/enter_shoe_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={``+newShoe.size}"
            android:hint="@string/enter_shoe_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={newShoe.company}"
            android:hint="@string/enter_company_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={newShoe.description}"
            android:hint="@string/enter_description" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/cancel" />


    </LinearLayout>
</layout>